--- a/src/Sample.Wasm/wwwroot/index.html
+++ b/src/Sample.Wasm/wwwroot/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Sample.Wasm</title>
-    <base href="/chatgpt-like/" />
+    <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="Sample.Wasm.styles.css" rel="stylesheet" />
