--- a/src/Sample.Wasm/wwwroot/index.html
+++ b/src/Sample.Wasm/wwwroot/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>Sample.Wasm</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
@@ -20,6 +22,15 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script>
+        // 모바일 브라우저 UI에 의해 vh가 달라지는 문제 보정
+        function setAppVh() {
+            document.documentElement.style.setProperty('--app-vh', window.innerHeight + 'px');
+        }
+        setAppVh();
+        window.addEventListener('resize', setAppVh);
+        window.addEventListener('orientationchange', setAppVh);
+    </script>
     <script src="js/indexeddb.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
