--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/icon-192.png" />
+  <link rel="icon" type="image/png" href="./icon-192.png" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
   <title>ChatGPT-like</title>
@@ -16,10 +16,10 @@
   <meta name="apple-mobile-web-app-title" content="ChatGPT-like" />
 
   <!-- Open Iconic CSS -->
-  <link href="/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet">
+  <link href="./open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet">
 
   <!-- Manifest -->
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="manifest" href="./manifest.json" />
 </head>
 
 <body>
